[ACHP: Website Requirement Analysis Work Order: Merge Personal Dev Sites Oct 26 2016 Task] Merged in a bug fix for the main nav header. In previous versions, header links covered the admin menu bar.

--- a/themes/achp/css/style.css
+++ b/themes/achp/css/style.css
@@ -2473,7 +2473,7 @@ $arrow-padding: 5px;*/
         float: left;
         display: block;
         margin-right: 0%;
-        width: 75%;
+        width: 75.0%;
         background-color: #fff;
         border-bottom: 35px solid transparent;
         float: right;
@@ -3455,5 +3455,3 @@ button, #news_landing_page #content .news-landing-container .views-exposed-form 
 /* Admin menu overlay */
 body.toolbar-tray-open.toolbar-vertical.toolbar-fixed {
   margin: 0px; }
-
-/*# sourceMappingURL=style.css.map */
